--- a/src/styles.css
+++ b/src/styles.css
@@ -8,18 +8,16 @@ body {
   border-radius: 5px;
 }
 
-img {
-  width: 100%;
-}
-
 div.container {
   text-align: center;
   padding: 10px 20px;
 }
 
-.middle-page {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
+canvas#hidden-canvas {
+  display: none;
+}
+
+canvas#output-canvas {
+  background-color: black;
+  border-radius: 5px;
 }
